--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,15 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
+configurations.all {
+    resolutionStrategy { force 'androidx.lifecycle:lifecycle-runtime:2.3.0' }
+    resolutionStrategy { force 'androidx.lifecycle:lifecycle-process:2.3.0' }
+    resolutionStrategy { force 'androidx.core:core-ktx:1.6.0' }
+    resolutionStrategy { force 'androidx.appcompat:appcompat:1.3.0' }
+    resolutionStrategy { force 'androidx.appcompat:appcompat-resources:1.3.0' }
+    resolutionStrategy { force 'androidx.emoji2:emoji2-views-helper:0.9.0' }
 
+}
 android {
     compileSdk 30
 
